Fix services page horizontal overflow on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,10 +48,17 @@ iframe {
 .hide-scrollbar {
   -ms-overflow-style: none;
   scrollbar-width: none;
+  -webkit-overflow-scrolling: touch;
 }
 
 .hide-scrollbar::-webkit-scrollbar {
   display: none;
   width: 0;
   height: 0;
+}
+
+@supports (overflow-y: scroll) {
+  .hide-scrollbar {
+    overflow-y: scroll;
+  }
 }
